--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postversion": "yarn build && git push --tags && git push",
+    "deploy": "firebase deploy --only hosting"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
